# python-polarion

./: .gitchangelog.rc  .gitignore  .readthedocs.yaml  LICENSE  README.md  changelog  requirements.txt  setup.cfg  setup.py
docs/: conf.py  document.rst  index.rst  plan.rst  polarion_client.rst  project.rst  project_group.rst  quick_start.rst  requirements.txt  testrecord.rst  testrun.rst  utils.rst  workitem.rst  xml.rst
polarion/: __init__.py  comment.py  document.py  factory.py  folder.py  module.py  plan.py  polarion.py  project.py  project_groups.py  record.py  test_table.py  testrun.py  user.py  utils.py  workitem.py  xml.py
polarion/base/: comments.py  custom_fields.py  polarion_object.py
src/: polarion.py  project.py  testrun.py  workitem.py
tests/: keys_template.py  test_junit.py  test_polarion_client.py  test_polarion_document.py  test_polarion_plan.py  test_polarion_project.py  test_polarion_test_record.py  test_polarion_testrun.py  test_polarion_user.py  test_polarion_utils.py  test_polarion_workitem.py
tests/junit/: no_properties.xml  properties-errors.xml  properties-trace-sys-out.xml  properties.xml
