[metadata]
# replace with your username:
name = polarion
version = 0.1.5
author = Jesper Raemaekers
author_email = .raemaekers@relek.nl
description = Polarion client for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jesper-raemaekers/python-polarion
project_urls =
    Bug Tracker = https://github.com/jesper-raemaekers/python-polarion/issues
    Documentation = https://python-polarion.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.6